# FATE

./: .gitmodules  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
arch/api/: __init__.py
arch/api/impl/based_2x/: federation.py
arch/transfer_variables/auth_conf/federatedml/: homo_binning_trans_var.json
cluster-deploy/doc/: Fate-allinone_deployment_guide_install_zh.md
cluster-deploy/scripts/: deploy_cluster_allinone.sh  deploy_cluster_multinode.sh  packaging.sh
cluster-deploy/scripts/deploy/: init_env.sh
conf/: service_conf.yaml
doc/readthedoc/: conf.py  dataio.rst  develop.rst  dsl_conf_setting.rst  federatedml.rst  federation.rst  index.rst  quick_start.rst  requirements.txt  session.rst  upload.rst
doc/readthedoc/_templates/: layout.html
doc/readthedoc/api/: federatedml.param.rst
doc/readthedoc/install/: cluster.rst  standalone.rst
fate_arch/common/: conf_utils.py  json_utils.py  log.py
fate_arch/federation/transfer_variable/: _auth.py
fate_arch/standalone/: _standalone.py
fate_config/: build.sh  pyproject.toml
fate_config/fate_config/: __init__.py  _service_config.py  _utils.py  script.py
fate_flow/: fate_flow_client.py  fate_flow_server.py  service.py  settings.py
fate_flow/components/: upload.py
fate_flow/entity/: runtime_config.py
fate_flow/manager/model_manager/: migrate_model.py  pipelined_model.py
fate_flow/operation/: task_executor.py
fate_flow/tests/api_tests/: data_access_test.py  job_operation_test.py  table_test.py  tracking_test.py
fate_flow/utils/: authentication_utils.py  grpc_utils.py  job_utils.py  schedule_utils.py
federatedml/: README.rst
federatedml/feature/homo_feature_binning/: homo_split_points.py
federatedml/linear_model/: base_linear_model_arbiter.py
federatedml/linear_model/linear_regression/: base_linear_regression.py
federatedml/linear_model/linear_regression/hetero_linear_regression/: hetero_linr_guest.py
federatedml/linear_model/poisson_regression/: base_poisson_regression.py
federatedml/linear_model/poisson_regression/hetero_poisson_regression/: hetero_poisson_guest.py
federatedml/local_baseline/: local_baseline.py
federatedml/optim/gradient/: hetero_linear_model_gradient.py  hetero_linr_gradient_and_loss.py
federatedml/statistic/union/: union.py
federatedml/transfer_variable/: base_transfer_variable.py
scripts/: copy_examples.sh
standalone-deploy/: README.md  README.rst
standalone-deploy/doc/: Fate-standalone_deployment_guide_zh.md
test_example/: demo.py  submit.py
test_example/client/: cmd.py  run_test.py  runner.py  submit.py
test_example/dsl/: __init__.py  args.py  io.py  param.py  pipe.py
test_example/dsl/stage/: __init__.py  base.py  dataio.py  homo_nn.py
