[tool.poetry]
name = "fate"
version = "1.5.0"
description = "FATE"
authors = ["FederatedAI <contact@FedAI.org>"]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://fate.fedai.org/"
repository = "https://github.com/FederatedAI/FATE"
documentation = "https://fate.readthedocs.io/en/latest/?badge=latest"
keywords = ["FATE", "Federated Learning"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "arch"},
    { include = "fate_flow" },
    { include = "fate_arch" },
    { include = "federatedml" },
    { include = "compatible_hook" },
    { include = "sitecustomize.py" }
]

[tool.poetry.dependencies]
python = "^3.6"
etaf_config = "^1.5.0"
apsw = "^3.9.2.post1"
cachetools = "^3.0.0"
deprecated = "^1.2.7"
Flask = "^1.0.2"
gmpy2 = "^2.0.8"
kazoo = "^2.6.1"
lmdb = "^0.94"
matplotlib = "^3.0.2"
numba = "^0.40.1"
numpy = "^1.18.4"
pandas = "^0.23.4"
peewee = "^3.9.3"
psutil = "^5.6.6"
pycryptodomex = "^3.6.6"
python-dotenv = "^0.13.0"
redis = "^3.0.1"
requests = "^2.23.0"
ruamel-yaml = "^0.16.10"
scikit-learn = "^0.19.2"
scipy = "^1.1.0"
six = "^1.14.0"
sklearn = "^0.0"
tensorflow = "~1.15.2"
torch = "~1.4.0"
torchvision = "^0.5.0"
tornado = "^6.0.4"
Werkzeug = "^0.15.3"
cos-python-sdk-v5 = "^1.8.0"
dicttoxml = "^1.7.4"
requests_toolbelt = "^0.8.0"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
fate_service = "fate_flow.service:service"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
